# paho.mqtt.embedded-c

./: .gitmodules  .travis.yml  README.md  gen_ca_certs.sh  mbedtls-config.h  meson.build  meson_options.txt  travis-build.sh  travis-install.sh
.github/workflows/: build.yml
MQTTClient-C/samples/linux/: stdoutsub.c
MQTTClient-C/src/: MQTTClient.c  MQTTClient.h
MQTTClient-C/src/linux/: MQTTLinux.c  MQTTLinux.h
MQTTClient-C/test/: test1.c
MQTTPacket/samples/: ping.c  ping_nb.c  pub0sub1.c  pub0sub1_nb.c  qos0pub.c  transport.c  transport.h
MQTTPacket/test/: test1.c
